ServiceB/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b
  template:
    metadata:
      labels:
        app: service-b
    spec:
      containers:
      - name: service-b-container
        image: cawamoedge/bitcoin:latest
        ports:
        - containerPort: 80
