ServiceB/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-b-service
spec:
  selector:
    app: service-b
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
